--- a/website/html/templates/control/help.html
+++ b/website/html/templates/control/help.html
@@ -54,7 +54,7 @@ Help - Seattle Clearinghouse
 					<li><a href="#howtouse">How to use the Seattle Clearinghouse portal</a></li>
 					<ul>
 						<li><a href="#profile">Profile : User keys, port, and other information</a></li>
-						<li><a href="#myvessels">My Vessels : Managing vessels -- acquiring and releasing vessel resources</a></li>
+						<li><a href="#myVMs">My VMs : Managing VMs -- acquiring and releasing VM resources</a></li>
 						<li><a href="#getdonations">Get Donations : Donating to the platform</a></li>
 					</ul>
 					<li><a href="#contact">Who to contact for more help</a></li>
@@ -116,13 +116,13 @@ Help - Seattle Clearinghouse
 			  <li><strong>Download the demokit.</strong> The demokit
 			  includes the Seattle shell which you will
 			  need to run programs on your acquired
-			  vessels. For more information on how to use
+			  VMs. For more information on how to use
 			  the Seattle shell, see <a href="https://seattle.cs.washington.edu/wiki/SeattleShell">this page</a>.
 			  </li>
 
 			  <li><strong>Download the public and private
 			  keys.</strong> You will need these two key files
-			  to access your acquired vessels. Once you
+			  to access your acquired VMs. Once you
 			  download them, place the two key files in
 			  the same directory as Seattle shell you
 			  downloaded with the Seattle demokit
@@ -139,46 +139,46 @@ Help - Seattle Clearinghouse
 			  programs.  </li>
 			</ul>
 			
-			<h3><a name="myvessels">My Vessels : Managing vessels -- acquiring and releasing vessel resources</a></h3>
+			<h3><a name="myVMs">My VMs : Managing VMs -- acquiring and releasing VM resources</a></h3>
 			
 			<p>On this page you can see more detailed
-			information about your acquired vessels, including
+			information about your acquired VMs, including
 			name, location, and expiration time. This page also
-			allows you to acquire more vessel resources, or remove
+			allows you to acquire more VM resources, or remove
 			the ones you currently have.</p>
 
 			<ul>
 
-			  <li><strong>Vessel Information.</strong> For each
-			  vessel that you acquire, you will see an
-			  entry in the table with the <strong>vessel
+			  <li><strong>VM Information.</strong> For each
+			  VM that you acquire, you will see an
+			  entry in the table with the <strong>VM
 			  location</strong> (denoted by its IP address) and
-			  <strong>vessel name</strong>. This is the name that seash
-			  will display when you browse your vessels. Each vessel also
+			  <strong>VM name</strong>. This is the name that seash
+			  will display when you browse your VMs. Each VM also
 			  has an <strong>expiration time</strong> listed. This is the
-			  time remaining until your hold on the vessel expires and it
+			  time remaining until your hold on the VM expires and it
 			  is returned to the Seattle pool for use by other users.
 
-			  <li><strong>Getting more vessels.</strong>
+			  <li><strong>Getting more VMs.</strong>
 
-			  Above the table with vessel information,
+			  Above the table with VM information,
 			  you'll see a form in which you can select
-			  the number of vessels that you would like to
+			  the number of VMs that you would like to
 			  acquire, and the type of network environment
 			  you would like to have between the acquired
-			  vessels. There are three choices for the
+			  VMs. There are three choices for the
 			  environment: </li>
 
 			  <ul>
 
-			    <li><strong>WAN</strong> : Wide area network. The vessels
+			    <li><strong>WAN</strong> : Wide area network. The VMs
 			    will be as spread out as possible.</li>
 			    
-			    <li><strong>LAN</strong> : Local area network. The vessels
+			    <li><strong>LAN</strong> : Local area network. The VMs
 			    will be on the same local network. </li>
 
 			    <li><strong>Random</strong> : A random selection of
-			    vessels, and an unpredictable network
+			    VMs, and an unpredictable network
 			    environment.</li>
 			    
 			  </ul>
