--- a/website/html/templates/control/profile.html
+++ b/website/html/templates/control/profile.html
@@ -177,7 +177,7 @@ Profile - Seattle Clearinghouse
 				</tr>
 				<tr class="odd">
 					<td class="key">API Key
-						<img class="help" src="{{ MEDIA_URL }}images/help-icon.png"title="The Clearinghouse offers an API key that allows applications to perform actions on your behalf, such as acquiring, releasing, and renewing vessels.  If this key is lost or stolen, you can reset it at any time."/></td>
+						<img class="help" src="{{ MEDIA_URL }}images/help-icon.png"title="The Clearinghouse offers an API key that allows applications to perform actions on your behalf, such as acquiring, releasing, and renewing VMs.  If this key is lost or stolen, you can reset it at any time."/></td>
 					<td class="value api_cell"> 
 							<span class="api_cell" title="double click to show"><i>double click to show</i></span>
 							<span id="api_key" class="hide_this" title="double click to hide">{{ api_key }}</span>
@@ -188,7 +188,7 @@ Profile - Seattle Clearinghouse
 					</td>
 				</tr>
 				<tr class="even">
-					<td class="key">Port <img class="help" src="{{ MEDIA_URL }}images/help-icon.png"title="This indicates a port number that by default will be available for TCP / UDP on all of your acquired vessels."/></td>
+					<td class="key">Port <img class="help" src="{{ MEDIA_URL }}images/help-icon.png"title="This indicates a port number that by default will be available for TCP / UDP on all of your acquired VMs."/></td>
 					<td class="value">{{ port }}</td>
 				</tr>
 				<tr class="odd">
@@ -274,7 +274,7 @@ Profile - Seattle Clearinghouse
 			</tr>
 				{% if has_privkey %}
 				<tr class="even">
-					<td class="key">Private Key <img class="help" src="{{ MEDIA_URL }}images/red-help-icon.png"title="The Clearinghouse does not need your private key to provide you access to vessels.  You may wish to download this key and then delete it from the server."/></td>
+					<td class="key">Private Key <img class="help" src="{{ MEDIA_URL }}images/red-help-icon.png"title="The Clearinghouse does not need your private key to provide you access to VMs.  You may wish to download this key and then delete it from the server."/></td>
 					<td class="value">********<a href="#">
 						<form class="inline" method="POST" action="{% url priv_key %}">
 							<button type="submit" title="Download your private key">Download </button>
